--- a/client/src/locales/en/translation.json
+++ b/client/src/locales/en/translation.json
@@ -37,6 +37,22 @@
     "donations": "Donations"
   },
   "components": {
+    "settings": {
+      "patronMode": {
+        "enablePatronMode": "Enable patron mode",
+        "disablePatronMode": "Disable patron mode",
+        "patronModeSignatureMessage": "Signing this message will {{state}} patron mode for address {{address}}.",
+        "firstParagraph": "This mode is for token holders <br /> who want to support Octant.",
+        "secondParagraph": "It disables and removes all personal allocations and project donations.",
+        "thirdParagraph": "All rewards go directly to the matching fund with no action required by the patron. Learn more in the <0>Docs</0>.",
+        "fourthParagraphEnable": "Slide the switch below all the way to <br /> the right to enable patron mode.",
+        "fourthParagraphDisable": "Slide the switch below all the way to <br /> the left to disable patron mode.",
+        "patronModeEnabled": "Patron mode enabled",
+        "patronModeDisabled": "Patron mode disabled",
+        "slideRightToConfirm": "Slide right to confirm",
+        "slideLeftToConfirm": "Slide left to confirm"
+      }
+    },
     "dedicated": {
       "rewardsCalculator": {
         "enterGLMAmount": "Enter a GLM amount",
@@ -85,9 +101,12 @@
       },
       "boxPersonalAllocation": {
         "personalAllocation": "Personal allocation",
+        "patronEarnings": "Patron earnings",
         "pending": "Pending",
         "withdrawToWallet": "Withdraw to wallet",
-        "pendingFundsAvailableAfter": "Pending funds available after"
+        "pendingFundsAvailableAfter": "Pending funds available after",
+        "allTime": "All time",
+        "currentEpoch": "Current epoch"
       },
       "budgetBox": {
         "approve2Transactions": "Please approve 2 transactions in your wallet. The first (required only once and for locking) allows ERC-20 tokens, and the second locks / unlocks GLM.",
@@ -239,7 +258,8 @@
       "loadingRewardBudget": "Loading reward budget...",
       "allocationStartsIn": "Allocation starts in <0>{{allocationPeriod}}</0>",
       "allocationEndsIn": "Allocation ends in <0>{{allocationPeriod}}</0>",
-      "admin": "Admin"
+      "admin": "Admin",
+      "patron": "Patron"
     }
   },
   "meta": {
@@ -384,7 +404,8 @@
       "chooseDisplayCurrency": "Choose a display currency",
       "cryptoMainValueDisplay": "Use crypto as main value display",
       "alwaysShowOnboarding": "Always show onboarding",
-      "alwaysShowOctantTips": "Always show tips"
+      "alwaysShowOctantTips": "Always show tips",
+      "enablePatronMode": "Enable patron mode"
     },
     "syncStatus": {
       "information": "We're synchronizing things to prepare the<br/>next epoch, so the app will be unavailable<br/>for a little while. Please check back soon."
