feat: prototype of history personal only allocation

--- a/client/src/locales/en/translation.json
+++ b/client/src/locales/en/translation.json
@@ -172,6 +172,7 @@
       },
       "historyItem": {
         "allocatedRewards": "Allocated rewards",
+        "personalAllocation": "Personal allocation",
         "lockedGLM": "Locked GLM",
         "unlockedGLM": "Unlocked GLM",
         "projects": "Projects",
