--- a/client/src/locales/en/translation.json
+++ b/client/src/locales/en/translation.json
@@ -19,7 +19,6 @@
   },
   "common": {
     "availableNow": "Available now",
-    "budget": "Budget {{budget}}",
     "calculateRewards": "Calculate rewards",
     "close": "Close",
     "copied": "Copied",
@@ -34,6 +33,7 @@
     "personal": "Personal",
     "personalAllocation": "Personal allocation",
     "proposalForbiddenOperation": "As a proposal you are not able to proceed with this operation",
+    "rewards": "Rewards {{rewards}}",
     "thresholdDataUnavailable": "Threshold data unavailable",
     "valueCantBeEmpty": "Value can't be empty"
   },
