--- a/client/src/locales/en/translation.json
+++ b/client/src/locales/en/translation.json
@@ -366,20 +366,20 @@
       },
       "stepsEpoch1": {
         "welcomeToOctant": {
-          "header": "Welcome to Octant Epoch 1",
-          "text": "Octant is a Golem Foundation experiment in decentralised governance and funding public good projects.<br/><br/>To get started, connect your wallet and lock some GLM in the Earn view. Take a look at the <0>FAQ</0> if you want to learn more."
+          "header": "Welcome to Octant",
+          "text": "To get started, lock some GLM in the <0>Earn</0> view, and take a look at the projects you can donate to in the <1>Projects</1> view.<br/><br/>If you already have GLM locked, you’ll have some rewards to use during E1 Allocation window, which runs from 19 Oct to 2 Nov."
         },
         "earnRewards": {
           "header": "Earn ETH rewards",
-          "text": "If you lock more than 100 GLM, you will earn ETH in Epoch 2. The longer you lock, the more rewards you earn.<br/><br/>Tokens can be unlocked anytime but if you want to maximise rewards, keep them locked for as long as you can."
+          "text": "ETH rewards are earned based on a weighted average, so the more GLM you lock and the longer you lock it for, the more you earn.<br/><br/>You can unlock at any time. Use the calculator in the <0>Earn</0> view to work out the return per epoch on a given amount of GLM."
         },
-        "previewProjects": {
-          "header": "Preview projects",
-          "text": "Epoch 1 is a preview, so you can't donate to projects yet, but you can read about and add them to the Allocate view ready for Epoch 2.<br/><br/>Just tap the heart icon on the project tile or in the detail page.The badge on the bottom navbar will count the projects you added."
+        "donateToProjects": {
+          "header": "Donate to projects",
+          "text": "Check out the lineup for Epoch 1 in the <0>Projects</0> view. Tap a project tile to read its details. Help your favourite projects out by donating to them.<br/><br/>Your donation will be fund-matched by Golem Foundation. Just tap the heart to add a project to the <1>Allocate</1> view where you can donate."
         },
-        "getReady": {
-          "header": "Get ready for Epoch 2",
-          "text": "Octant begins properly in Epoch 2. There is no set date for it yet, so if you want to be involved, keep an eye out for updates.<br/><br/>Visit <0>Octant.build</0>, join the <1>Discord</1> or get project updates on <2>Twitter</2>."
+        "slideIt": {
+          "header": "Just slide it",
+          "text": "Once you have rewards, use the slider in the <0>Allocate</0> view to divide your rewards into donations to projects or personal allocation.<br/><br/>Change your choices at any time during the Allocation window, just unlock the slider, make some edits and reconfirm in your wallet."
         }
       }
     },
