--- a/client/src/locales/en/translation.json
+++ b/client/src/locales/en/translation.json
@@ -387,7 +387,8 @@
       "cryptoMainValueDisplay": "Use crypto as main value display",
       "alwaysShowOnboarding": "Always show onboarding",
       "alwaysShowOctantTips": "Always show tips",
-      "enablePatronMode": "Enable patron mode"
+      "enablePatronMode": "Enable patron mode",
+      "patronModeTooltip":  "Patron mode is for token holders who want to support Octant. It disables allocation to yourself or projects. All rewards go directly to the matching fund with no action required by the patron."
     },
     "syncStatus": {
       "information": "We're synchronizing things to prepare the<br/>next epoch, so the app will be unavailable<br/>for a little while. Please check back soon."
