oct-667 allocation slider without rewards

--- a/client/src/locales/en/translation.json
+++ b/client/src/locales/en/translation.json
@@ -86,6 +86,7 @@
       "allocationRewardsBox": {
         "title": "Allocate rewards",
         "subtitle": "{{individualReward}} available",
+        "subtitleNoRewards": "No rewards available yet",
         "donate": "Donate {{percentRewardsForProposals}}%",
         "withdraw": "Withdraw {{percentWithdraw}}%"
       },
@@ -394,7 +395,7 @@
       "alwaysShowOnboarding": "Always show onboarding",
       "alwaysShowOctantTips": "Always show tips",
       "enablePatronMode": "Enable patron mode",
-      "patronModeTooltip":  "Patron mode is for token holders who want to support Octant. It disables allocation to yourself or projects. All rewards go directly to the matching fund with no action required by the patron."
+      "patronModeTooltip": "Patron mode is for token holders who want to support Octant. It disables allocation to yourself or projects. All rewards go directly to the matching fund with no action required by the patron."
     },
     "syncStatus": {
       "information": "We're synchronizing things to prepare the<br/>next epoch, so the app will be unavailable<br/>for a little while. Please check back soon."
