--- a/client/src/locales/en/translation.json
+++ b/client/src/locales/en/translation.json
@@ -342,7 +342,7 @@
       }
     },
     "onboarding": {
-      "steps": {
+      "stepsDecisionWindowOpen": {
         "usingTheApp": {
           "header": "Using the app",
           "text": "Before we can go any further, please read the terms of service and click the checkbox below to agree with them."
@@ -358,7 +358,7 @@
         },
         "welcomeToOctant": {
           "header": "Welcome to Octant",
-          "text": "To get started, lock some GLM in the <0>Earn</0> view, and take a look at the projects you can donate to in the <1>Projects</1> view.<br/><br/>If you already have GLM locked, you’ll have some rewards to use during E1 Allocation window, which runs from 19 Oct to 2 Nov."
+          "text": "To get started, lock some GLM in the <0>Earn</0> view, and take a look at the projects you can donate to in the <0>Projects</0> view.<br/><br/>If you already have GLM locked, you’ll have some rewards to use during E1 Allocation window, which runs from 19 Oct to 2 Nov."
         },
         "earnRewards": {
           "header": "Earn ETH rewards",
@@ -366,11 +366,39 @@
         },
         "donateToProjects": {
           "header": "Donate to projects",
-          "text": "Check out the lineup for Epoch 1 in the <0>Projects</0> view. Tap a project tile to read its details. Help your favourite projects out by donating to them.<br/><br/>Your donation will be fund-matched by Golem Foundation. Just tap the heart to add a project to the <1>Allocate</1> view where you can donate."
+          "text": "Check out the lineup for Epoch 1 in the <0>Projects</0> view. Tap a project tile to read its details. Help your favourite projects out by donating to them.<br/><br/>Your donation will be fund-matched by Golem Foundation. Just tap the heart to add a project to the <0>Allocate</0> view where you can donate."
         },
         "slideIt": {
           "header": "Just slide it",
           "text": "Once you have rewards, use the slider in the <0>Allocate</0> view to divide your rewards into donations to projects or personal allocation.<br/><br/>Change your choices at any time during the Allocation window, just unlock the slider, make some edits and reconfirm in your wallet."
+        }
+      },
+
+      "stepsDecisionWindowClosed": {
+        "usingTheApp": {
+          "header": "Using the app",
+          "text": "Before we can go any further, please read the terms of service and click the checkbox below to agree with them."
+        },
+        "claimGlm": {
+          "header": "Claim your GLM",
+          "text": "As you hold an Epoch Zero Token and you participated in the Snapshot vote, you are eligible to claim {{value}} GLM. Click the button below to withdraw to your wallet.",
+          "buttonLabel": {
+            "withdraw": "Withdraw GLM",
+            "withdrawn": "GLM claimed"
+          },
+          "signMessage": "Claim {{value}} GLMs"
+        },
+        "welcomeToOctant": {
+          "header": "Welcome to Octant Epoch 2",
+          "text": "To get started, lock some GLM in the <0>Earn</0> view, and see how the Epoch 1 projects performed in the Epoch 1 archive.<br /><br />If you made personal allocations in the previous epoch, your ETH will be available to withdraw in the <0>Earn</0> view."
+        },
+        "earnRewards": {
+          "header": "Earn ETH rewards",
+          "text": "Use the <0>Earn</0> view calculator to work out your return per epoch for any amount of GLM. You can unlock your tokens at any time.<br /><br/>If you already have GLM locked, you will have some rewards to use during Epoch 2 allocation which will begin in late January 2024."
+        },
+        "getInvolved": {
+          "header": "Get involved",
+          "text": "Epoch 2 projects will start appearing in the app after a 2-3 week cooling off period. Get involved and suggest a project in our Discord.<br /><br />Once projects are shortlisted, a community vote on Snapshot decides which projects enter this epoch. All participating voters get a POAP."
         }
       }
     },
