--- a/client/src/locales/en/translation.json
+++ b/client/src/locales/en/translation.json
@@ -340,7 +340,7 @@
       }
     },
     "onboarding": {
-      "stepsDecisionWindowOpen": {
+      "stepsCommon": {
         "usingTheApp": {
           "header": "Using the app",
           "text": "Before we can go any further, please read the terms of service and click the checkbox below to agree with them."
@@ -353,7 +353,9 @@
             "withdrawn": "GLM claimed"
           },
           "signMessage": "Claim {{value}} GLMs"
-        },
+        }
+      },
+      "stepsDecisionWindowOpen": {
         "welcomeToOctant": {
           "header": "Welcome to Octant",
           "text": "To get started, lock some GLM in the <0>Earn</0> view, and take a look at the projects you can donate to in the <0>Projects</0> view.<br/><br/>If you already have GLM locked, you’ll have some rewards to use during E1 Allocation window, which runs from 19 Oct to 2 Nov."
@@ -371,21 +373,7 @@
           "text": "Once you have rewards, use the slider in the <0>Allocate</0> view to divide your rewards into donations to projects or personal allocation.<br/><br/>Change your choices at any time during the Allocation window, just unlock the slider, make some edits and reconfirm in your wallet."
         }
       },
-
       "stepsDecisionWindowClosed": {
-        "usingTheApp": {
-          "header": "Using the app",
-          "text": "Before we can go any further, please read the terms of service and click the checkbox below to agree with them."
-        },
-        "claimGlm": {
-          "header": "Claim your GLM",
-          "text": "As you hold an Epoch Zero Token and you participated in the Snapshot vote, you are eligible to claim {{value}} GLM. Click the button below to withdraw to your wallet.",
-          "buttonLabel": {
-            "withdraw": "Withdraw GLM",
-            "withdrawn": "GLM claimed"
-          },
-          "signMessage": "Claim {{value}} GLMs"
-        },
         "welcomeToOctant": {
           "header": "Welcome to Octant Epoch 2",
           "text": "To get started, lock some GLM in the <0>Earn</0> view, and see how the Epoch 1 projects performed in the Epoch 1 archive.<br /><br />If you made personal allocations in the previous epoch, your ETH will be available to withdraw in the <0>Earn</0> view."
