OCT-1086: Add tooltips for Save to & Remove from Allocate flow

--- a/client/src/locales/en/translation.json
+++ b/client/src/locales/en/translation.json
@@ -64,6 +64,12 @@
       }
     },
     "dedicated": {
+      "buttonAddToAllocate": {
+        "saveToAllocate": "Save to allocate",
+        "saved": "Saved",
+        "removeFromAllocate": "Remove from allocate",
+        "removed": "Removed"
+      },
       "rewardsCalculator": {
         "enterGLMAmount": "Enter a GLM amount",
         "lockFor": "Lock for",
