--- a/client/src/locales/en/translation.json
+++ b/client/src/locales/en/translation.json
@@ -133,7 +133,8 @@
       "connectWallet": {
         "browserWallet": "Browser wallet",
         "connecting": "Connecting ...",
-        "walletConnect": "WalletConnect"
+        "walletConnect": "WalletConnect",
+        "ledgerConnect": "Ledger"
       },
       "donationEstimateBox": {
         "donationEstimate": "Donation estimate",
