OCT-1137: Add unique history entry for patron donations: client

--- a/client/src/locales/en/translation.json
+++ b/client/src/locales/en/translation.json
@@ -188,7 +188,8 @@
         "lockedGLM": "Locked GLM",
         "unlockedGLM": "Unlocked GLM",
         "projects": "Projects",
-        "withdrawnFunds": "Withdrawn funds"
+        "withdrawnFunds": "Withdrawn funds",
+        "epochDonation": "Epoch {{epoch}} donation"
       },
       "historyItemModal": {
         "header": {
@@ -204,7 +205,8 @@
           "gasPrice": "Gas price",
           "viewOnEtherscan": "View on Etherscan",
           "when": "When",
-          "withdrawal": "Withdrew ETH"
+          "withdrawal": "Withdrew ETH",
+          "matchingFundDonation": "Matching fund donation"
         }
       },
       "historyTransactionLabel": {
