OCT-1173 Implement Allocate V3: add logic

--- a/client/src/locales/en/translation.json
+++ b/client/src/locales/en/translation.json
@@ -86,8 +86,8 @@
       },
       "allocationNavigation": {
         "confirm": "Confirm",
-        "reset": "Reset",
-        "edit": "Edit"
+        "edit": "Edit",
+        "reset": "Reset"
       },
       "allocationRewardsBox": {
         "title": "Allocate rewards",
