OCT-1211 Implement Allocate V3: feed summary view w/ data

--- a/client/src/locales/en/translation.json
+++ b/client/src/locales/en/translation.json
@@ -298,7 +298,11 @@
       "allocationItem": {
         "epoch1": "No funding threshold in Epoch 1",
         "standard": "{{sum}} / {{threshold}}",
-        "simulate": "{{value}} {{matched}}"
+        "simulate": {
+          "matchedZero": "{{value}}",
+          "mobile": "{{value}} + {{matched}}",
+          "desktop": "{{value}} + {{matched}} matching"
+        }
       },
       "allocationSuccessful": "Allocation successful",
       "tip": {
