OCT-1216 Implement Allocate V3: fix slider modal updated on values in tiles & i18n in header

--- a/client/src/locales/en/translation.json
+++ b/client/src/locales/en/translation.json
@@ -96,6 +96,8 @@
         "subtitleNoRewards": "No rewards available yet",
         "donate": "Donate",
         "donated": "Donated",
+        "donateWithPercentage": "Donate {{percentage}}%",
+        "personalWithPercentage": "Personal {{percentage}}%",
         "allocated": "Allocated",
         "manual": "Manual"
       },
