OCT-1278: Time to change allocation window changes in real time

--- a/client/src/locales/en/translation.json
+++ b/client/src/locales/en/translation.json
@@ -275,8 +275,8 @@
       "buttonConnect": "Connect",
       "noRewardsYet": "No rewards yet",
       "loadingRewardBudget": "Loading reward budget...",
-      "allocationStartsIn": "Allocation starts in <0>{{allocationPeriod}}</0>",
-      "allocationEndsIn": "Allocation ends in <0>{{allocationPeriod}}</0>",
+      "allocationStartsIn": "Allocation starts in <0>{{currentPeriod}}</0>",
+      "allocationEndsIn": "Allocation ends in <0>{{currentPeriod}}</0>",
       "admin": "Admin",
       "patron": "Patron"
     }
