OCT-1239 Implement Allocate V3: allow removal of projects that user previously allocated to

--- a/client/src/locales/en/translation.json
+++ b/client/src/locales/en/translation.json
@@ -286,9 +286,8 @@
     "fundrasingOnOctant": "{{projectName}} is fundrasing on Octant"
   },
   "toasts": {
-    "cantRemoveProjectWithDonations": {
-      "title": "You can't remove projects with donations",
-      "message": "Set your donation to zero in Allocate view to enable project removal"
+    "confirmChanges": {
+      "title": "Please confirm your allocation to keep your changes"
     },
     "wrongNetwork": {
       "title": "Wrong network",
