--- a/client/src/locales/en/translation.json
+++ b/client/src/locales/en/translation.json
@@ -47,7 +47,8 @@
     "lessThan1m": "less than 1m",
     "donors": "Donors",
     "available": "Available",
-    "totalDonated": "Total donated"
+    "totalDonated": "Total donated",
+    "waitingForConfirmation": "Waiting for confirmation"
   },
   "components": {
     "settings": {
@@ -164,7 +165,6 @@
           "approve": "Approve"
         },
         "glmLockTabs": {
-          "waitingForConformation": "Waiting for confirmation",
           "useMax": "Use max",
           "amountToLock": "Amount to lock",
           "amountToUnlock": "Amount to unlock",
@@ -265,8 +265,7 @@
         "rewardsBudget": "Rewards Budget",
         "amount": "Amount",
         "estimatedGasPrice": "Est. gas price",
-        "withdrawAll": "Withdraw all",
-        "waitingForConfirmation": "Waiting for confirmation"
+        "withdrawAll": "Withdraw all"
       }
     }
   },
