feat: show patrons tile

--- a/client/src/locales/en/translation.json
+++ b/client/src/locales/en/translation.json
@@ -357,6 +357,9 @@
       "generalMetrics": "General metrics",
       "totalWithdrawals": "Total withdrawals",
       "donationsVsPersonalAllocationValue": "Donations vs personal allocation value",
+      "patronModeActive": "Patron mode active",
+      "patronModeActiveLabel": "{{numberOfEpochs}} epochs",
+      "donatedAsPatron": "Donated as patron",
       "noAllocationsYet": "No allocations yet",
       "totalProjects": "Total projects",
       "totalEthStaked": "Total ETH Staked",
